Updated app design
-Added background image
-Added fonts (univers, futura, starwars font)
-Stylized cardview
-Tested screen rotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">QuotesApp</string>
+    <string name="app_name">Star Wars Quote App</string>
+    <string name="background_image">Tatooine showing the twin suns in the background</string>
+    <string name="quotewars">quotewars</string>
 </resources>
